--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <h1 class="greeting hidden"></h1>
     <div class="quote">
       <span></span>
+      <span></span>
     </div>
     <script src="js/clock.js"></script>
     <script src="js/greetings.js"></script>
