--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h2 class="clock">00:00</h2>
     <form class="login-form hidden">
       <input
         type="text"
@@ -20,15 +21,33 @@
       />
       <button>Log In</button>
     </form>
-
-    <h2 class="clock">00:00</h2>
     <h1 class="greeting hidden"></h1>
+
+    <form class="todo-form">
+      <input
+        type="text"
+        class="todo-input"
+        placeholder="Write things to do"
+        required
+      />
+    </form>
+    <ul class="todo-list"></ul>
+
     <div class="quote">
       <span></span>
       <span></span>
     </div>
+
+    <div class="weather">
+      <span></span>
+      <span></span>
+    </div>
+
     <script src="js/clock.js"></script>
     <script src="js/greetings.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/background.js"></script>
+    <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
   </body>
 </html>
